[package]
name = "sgbe"
version = "0.1.0"
authors = ["Will Johnston <wbjohnston@gmail.com>"]

[workspace]
members = ["core"]

[lib]
name = "common"
path = "src/common.rs"

[[bin]]
name = "gbdb"
path = "src/gbdb.rs"

[[bin]]
name = "cli"
path = "src/cli.rs"

[features]
nightly = []

[dev-dependencies]
assert_cli = "0.6"

[dependencies]
core = { path = "core" }
failure = "0.1"
log = "0.4"
enumset = "0.3"