[package]
name = "sgbe"
version = "0.1.0"
authors = ["Will Johnston <wbjohnston@gmail.com>"]

[workspace]
members = ["core"]

[[bin]]
name = "gbdb"
path = "src/gbdb.rs"

[[bin]]
name = "cli"
path = "src/cli.rs"

[features]
nightly = []
logging = ["env_logger"]

[dev-dependencies]
assert_cli = "0.6"

[dependencies]
core = { path = "core" }
env_logger = {optional = true, version = "0.5"}
failure = "0.1"
log = "0.4"
enumset = "0.3"